OO-7531: fixing test findings and refactoring